# pubmed-rag

./: .gitignore  pyproject.toml
frontend/pubmed-rag/: package-lock.json  package.json
frontend/pubmed-search/: jest.config.js  jest.setup.ts  package-lock.json  package.json
frontend/pubmed-search/app/: layout.tsx  page.tsx
frontend/pubmed-search/app/auth/login/: page.tsx
frontend/pubmed-search/app/auth/signup/: page.tsx
frontend/pubmed-search/app/auth/verify-email/: page.tsx
frontend/pubmed-search/components/: components-auth-login-modal.tsx
frontend/pubmed-search/components/article/: article-generator.tsx
frontend/pubmed-search/components/auth/: login-modal.tsx  signup-modal.tsx  use-auth.tsx
frontend/pubmed-search/components/layout/: header.tsx  main-nav.tsx
frontend/pubmed-search/components/search/: advanced-search-form.tsx  search-results.tsx
frontend/pubmed-search/components/search/__tests__/: advanced-search-form.test.tsx  search-results.test.tsx
frontend/pubmed-search/components/ui/: spinner.tsx
frontend/pubmed-search/mocks/: handlers.ts
frontend/pubmed-search/types/: index.ts  jest.d.ts
src/: app.py  auth.py  database.py  llm.py  models.py  pubmed.py  schemas.py  scheme.py  search.py  services.py
src/routers/: article.py  pubmed_search.py
tests/: __init__.py  conftest.py  test_auth.py  test_pubmed.py  test_services.py
