[project]
name = "pubmed-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "openai>=1.58.1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.0",
    "requests>=2.32.3",
    "ruff>=0.7.4",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "firebase-admin>=6.6.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.24.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
